Changed 'Grad' to 'Graduation'

--- a/app/admin/templates/applications_query_applicant_list.html
+++ b/app/admin/templates/applications_query_applicant_list.html
@@ -16,7 +16,7 @@
                             <th>Name</th>
                             <th>Position</th>
                             <th>Year</th>
-                            <th>EGD</th>
+                            <th>Graduation</th>
                             <th>Campus</th>
                             <th>Interest</th>
                             <th>Resume</th>
