--- a/app/admin/templates/dashboard.html
+++ b/app/admin/templates/dashboard.html
@@ -11,7 +11,7 @@
                 </div>
                 <div class="card-content">
                     <p class="category">Applications This Semester</p>
-                    <h3 class="title">{{ applications }}
+                    <h3 class="title">{{ current_applications }}
                     </h3>
                 </div>
                 <div class="card-footer">
@@ -29,7 +29,7 @@
                 </div>
                 <div class="card-content">
                     <p class="category">Unverified Users</p>
-                    <h3 class="title">{{ unverified_users }}</h3>
+                    <h3 class="title">{{ all_unverified }}</h3>
                 </div>
                 <div class="card-footer">
                     <div class="stats">
