Added links to dashboard and removed filler information

--- a/app/admin/templates/applications.html
+++ b/app/admin/templates/applications.html
@@ -39,7 +39,7 @@
                         </div>
                         <div class="col-md-6">
                             <h5 style='visibility:hidden'>.</h5>
-                            <a href=applications/{{ query_current_unverified }}>
+                            <a href=applications/{{ query_all_unverified }}>
                                 <div class="alert alert-primary">
                                     <span>Unverified Applicants</span>
                                 </div>
