--- a/app/admin/templates/dashboard.html
+++ b/app/admin/templates/dashboard.html
@@ -17,7 +17,7 @@
                 <div class="card-footer">
                     <div class="stats">
                         <i class="material-icons">people</i>
-                        <a href="#pablo">View Applications</a>
+                        <a href="applications/{{ query_current_all }}">View Applications</a>
                     </div>
                 </div>
             </div>
@@ -34,7 +34,7 @@
                 <div class="card-footer">
                     <div class="stats">
                         <i class="material-icons">local_offer</i>
-                        <a href="#pablo">View Unverified Users</a>
+                        <a href="applications/{{ query_all_unverified }}">View Unverified Users</a>
                     </div>
                 </div>
             </div>
@@ -51,7 +51,7 @@
                 <div class="card-footer">
                     <div class="stats">
                         <i class="material-icons">update</i>
-                        <a href="#pablo">View History</a>
+                        <a href="history">View History</a>
                     </div>
                 </div>
             </div>
@@ -68,43 +68,7 @@
                 <div class="card-footer">
                     <div class="stats">
                         <i class="material-icons">date_range</i>
-                        <a href="#pablo">View Interviews</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-6">
-            <div class="card card-stats">
-                <div class="card-header" data-background-color="green">
-                    <i class="fa fa-area-chart"></i>
-                </div>
-                <div class="card-content">
-                    <p class="category">
-                    % Awesomeness</p>
-                    <h3 class="title"><span class="text-success"><i class="fa fa-long-arrow-up"></i> 55% </span></h3>
-                </div>
-                <div class="card-footer">
-                    <div class="stats">
-                        <i class="material-icons">update</i>
-                        <a href="#pablo">View History</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-6">
-            <div class="card card-stats">
-                <div class="card-header" data-background-color="green">
-                    <i class="fa fa-area-chart"></i>
-                </div>
-                <div class="card-content">
-                    <p class="category">
-                    % Awesomeness</p>
-                    <h3 class="title"><span class="text-success"><i class="fa fa-long-arrow-up"></i> 55% </span></h3>
-                </div>
-                <div class="card-footer">
-                    <div class="stats">
-                        <i class="material-icons">update</i>
-                        <a href="#pablo">View History</a>
+                        <a href="/interviews">View Interviews</a>
                     </div>
                 </div>
             </div>
