--- a/app/static/css/login.css
+++ b/app/static/css/login.css
@@ -143,7 +143,7 @@ body {
   transition: 0.3s ease;
 }
 .form-module-button:hover {
-  background: #7a5db7;
+  background: #932783;
 }
 
 /* Wider width for forms */
