--- a/app/static/css/login.css
+++ b/app/static/css/login.css
@@ -102,6 +102,7 @@ body {
   width: 100%;
   height: 250px;
   resize: none;
+  white-space: pre-wrap;
 }
 .form-module textarea:focus {
   border: 1px solid #AC00AF;
