--- a/app/admin/templates/base_admin.html
+++ b/app/admin/templates/base_admin.html
@@ -75,7 +75,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                             </button>
-                            <a class="navbar-brand" href="dashboard"> Interview Scheduler </a>
+                            <a class="navbar-brand" href="/admin/dashboard"> Interview Scheduler </a>
                         </div>
                         <div class="collapse navbar-collapse">
                             <ul class="nav navbar-nav navbar-right">
