--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,51 +1,91 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<style>
-		body, html {
-		height: 100%;
-		margin: 0;
-		}
-		.hero-image {
-		background-image: url("../static/img/hexagon_banner.png");
-		height: 100%;
-		background-position: center;
-		background-repeat: no-repeat;
-		background-size: cover;
-		position: relative;
-		}
-		.hero-text {
-		text-align: center;
-		position: absolute;
-		top: 50%;
-		left: 50%;
-		transform: translate(-50%, -50%);
-		color: white;
-		}
-		.hero-text button {
-		border: none;
-		outline: 0;
-		display: inline-block;
-		padding: 10px 25px;
-		color: black;
-		background-color: #ddd;
-		text-align: center;
-		cursor: pointer;
-		}
-		.hero-text button:hover {
-		background-color: #555;
-		color: white;
-		}
-		</style>
-	</head>
-	<body>
-		<div class="hero-image">
-			<div class="hero-text">
-				<h1 style="font-size:45px">The Hive</h1>
-				<h1 style="font-size:40px">Interview Scheduler</h1>
-				<a href="/login/user"><button>Login</button></a>
-			</div>
-		</div>
-	</body>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8" />
+        <link rel="apple-touch-icon" sizes="76x76" href="/static/img/hive_logo.png" />
+        <link rel="icon" type="image/png" href="/static/img/hive_logo.png" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+        <title>The Hive: Interview Scheduler</title>
+        <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+        <meta name="viewport" content="width=device-width" />
+        <!-- Bootstrap core CSS -->
+        <link href="/static/css/bootstrap.min.css" rel="stylesheet" />
+        <!-- Fonts and icons -->
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
+        <link href='https://fonts.googleapis.com/css?family=Roboto:400,700,300|Material+Icons' rel='stylesheet' type='text/css'>
+    <!--  Theme CSS  -->
+    <link href="/static/css/freelancer.css" rel="stylesheet" />
+    <link href="/static/css/fade.min.css" rel="stylesheet" />
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+</head>
+
+<body id="page-top" class="index fade-in">
+
+    <!--  Navigation  -->
+    <nav id="mainNav" class="navbar navbar-fixed-top navbar-custom affix-top">
+        <div class="container">
+            <!--  Brand and toggle get grouped for better mobile display  -->
+            <div class="navbar-header page-scroll">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
+                </button>
+                <a class="navbar-brand" href="/">
+                    <span itemprop="The Hive" itemscope itemtype="http://schema.org/Person">
+                        <span>The Hive</span>
+                    </span>
+                </a>
+            </div>
+
+            <!--  Collect the nav links, forms, and other content for toggling  -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="page-scroll">
+                        <a href="/login/user">Register</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="/static/files/interview_scheduler_help.pdf">Help</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!--  Header  -->
+    <header class="header" id="top">
+        <div class="text-vertical-center">
+            <div class ="intro-text">
+            <div class="name">
+                The Hive: Interview Scheduler</div>
+            <h1 class="light">
+            </h1>
+            <hr class="fancylight">
+            <div class="col-md-10 col-md-offset-1">
+                <ul class="list-inline">
+                    <li>
+                        <a href="https://thehive.gtorg.gatech.edu/" class="btn-social btn-outline"><span class="sr-only">Website</span><i class="fa fa-fw fa-globe"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://www.facebook.com/hivemakerspace" class="btn-social btn-outline"><span class="sr-only">Facebook</span><i class="fa fa-fw fa-facebook"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://orgsync.com/145523/chapter" class="btn-social btn-outline"><span class="sr-only">Orgsync</span><i class="fa fa-fw fa-repeat"></i></a>
+                    </li>
+                    <li>
+                        <a href="mailto:hive@ece.gatech.edu?subject=Hive%20Questions%20" class="btn-social btn-outline"><span class="sr-only">Send mail</span><i class="fa fa-fw fa-envelope-o"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+            </div>
+    </header>
+
+</body>
+
 </html>
