--- a/app/admin/templates/base_admin.html
+++ b/app/admin/templates/base_admin.html
@@ -18,7 +18,7 @@
     </head>
     <body>
         <div class="wrapper">
-            <div class="sidebar" data-color="purple" data-image="/static/img/sidebar-1.jpg">
+            <div class="sidebar" data-color="purple" data-image="/static/img/hive.png">
                 <div class="logo">
                     <a href="" class="simple-text">
                         The Hive: Admin
