Allow admins to retrieve pdf binary data and view it as pdf in web browser

--- a/app/admin/templates/applications_applicant.html
+++ b/app/admin/templates/applications_applicant.html
@@ -68,7 +68,7 @@
                                 <td>{{ applicant.status }}</td>
                             </tr>
                                 <td>Resume</td>
-                                <td>{{ applicant.resume_link }}</td>
+                                <td><a href='/admin/applications/resume/{{ applicant.user_id }}' target="_blank"><i class="fa fa-2x fa-paperclip" aria-hidden="true"></i></a></td>
                             </tr>
                         </tbody>
                     </table>
