--- a/app/admin/templates/applications_query_applicant_list.html
+++ b/app/admin/templates/applications_query_applicant_list.html
@@ -29,7 +29,7 @@
                                     <td>{{ applicant.year }}</td>
                                     <td>{{ applicant.expected_graduation_date.strftime('%Y-%m-%d') }}</td>
                                     <td>{{ applicant.on_campus }}</td>
-                                    <td>{{ applicant.resume_link }}</td>
+                                    <td><a href='/admin/applications/resume/{{ applicant.user_id }}' target="_blank"><i class="fa fa-2x fa-paperclip" aria-hidden="true"></i></a></td>
                                     <td>{{ applicant.status }}</td>
                                 </tr>
                             {% endfor %}
