Removed time from graduation date in applicant view

--- a/app/admin/templates/applications_applicant.html
+++ b/app/admin/templates/applications_applicant.html
@@ -39,7 +39,7 @@
                             </tr>
                             <tr>
                                 <td>Expected Graduation Date</td>
-                                <td>{{ applicant.expected_graduation_date }}</td>
+                                <td>{{ applicant.expected_graduation_date.strftime('%Y-%m-%d') }}</td>
                             </tr>
                             <tr>
                                 <td>Semesters On Campus</td>
