Updated side card in control panel

--- a/app/admin/templates/control_panel.html
+++ b/app/admin/templates/control_panel.html
@@ -63,9 +63,9 @@
         <div class="col-md-4">
             <div class="card card-profile">
                 <div class="content">
-                    <h6 class="category text-gray">Current Developers</h6>
-                    <h4 class="card-title">Randy Deng</h4>
-                    <p class="card-content">Who doesn't love a good Dev anyway?</p>
+                    <h6 class="category text-gray">Misc. Information</h6>
+                    <h4 class="card-title">How do I update my username?</h4>
+                    <p class="card-content">Username updating is currently not supported, please contact the developer for details</p>
                 </div>
             </div>
         </div>
