--- a/app/admin/templates/base_admin.html
+++ b/app/admin/templates/base_admin.html
@@ -96,6 +96,15 @@
                 <div class="content">
                     <div class="container-fluid">
                         {% block content %}
+                            {% block flash %}
+                                {% with messages = get_flashed_messages(with_categories=true) %}
+                                    {% if messages %}
+                                        {% for category, message in messages %}
+                                            <p class="{{ category }}"> {{ message }} </p>
+                                        {% endfor %}
+                                    {% endif %}
+                                {% endwith %}
+                            {% endblock %}
                         {% endblock %}
                         <footer class="footer">
                             <div class="container-fluid">
