--- a/app/admin/templates/control_panel.html
+++ b/app/admin/templates/control_panel.html
@@ -10,9 +10,15 @@
                     <h4 class="title">Update Admin Password</h4>
                     <p class="category">Keep the admin account secure!</p>
                 </div>
-                {% block flash %}
-                  {{ super() }}
-                {% endblock %}
+                <div class="card-content">
+                    <div class="row">
+                        <div class="col-md-6 col-md-offset-3">
+                            {% block flash %}
+                              {{ super() }}
+                            {% endblock %}
+                        </div>
+                    </div>
+                </div>
                 <div class="card-content">
                     <form method="POST" action="{{ url_for('admin.control_panel') }}">
                         <div class="row">
