Added on hover effect in applications page and changed colors to be more appealing

--- a/app/admin/templates/applications.html
+++ b/app/admin/templates/applications.html
@@ -9,7 +9,7 @@
                 <div class="card-header" data-background-color="purple">
                     <h4 class="title">Applicant Manager</h4>
                     <p class="category">Brought to you by the one and only
-                        <a target="_blank" href="https://www.randydeng.com">Randy Deng</a>.
+                        <a target="_blank" href="https://www.randydeng.com">Randy Deng</a>
                     </p>
                 </div>
                 <div class="card-content">
@@ -17,22 +17,22 @@
                         <div class="col-md-6">
                             <h5>Current Semester Control Panel</h5>
                             <a href=applications/{{ query_current_all }}>
-                                <div class="alert alert-primary">
+                                <div class="applications applications-info">
                                     <span>All Applicants</span>
                                 </div>
                             </a>
                             <a href=applications/{{ query_current_accepted }}>
-                                <div class="alert alert-success">
+                                <div class="applications applications-success">
                                     <span>Accepted Applicants</span>
                                 </div>
                             </a>
                             <a href=applications/{{ query_current_remaining }}>
-                                <div class="alert alert-warning">
+                                <div class="applications applications-warning">
                                     <span>Remaining Applicants</span>
                                 </div>
                             </a>
                             <a href=applications/{{ query_current_rejected }}>
-                                <div class="alert alert-danger">
+                                <div class="applications applications-danger">
                                     <span>Rejected Applicants</span>
                                 </div>
                             </a>
@@ -40,22 +40,22 @@
                         <div class="col-md-6">
                             <h5 style='visibility:hidden'>.</h5>
                             <a href=applications/{{ query_all_unverified }}>
-                                <div class="alert alert-primary">
+                                <div class="applications applications-info">
                                     <span>Unverified Applicants</span>
                                 </div>
                             </a>
                             <a href=#>
-                                <div class="alert alert-success">
+                                <div class="applications applications-success">
                                     <span>Interview Scheduler</span>
                                 </div>
                             </a>
                             <a href=applications/{{ query_current_special }}>
-                                <div class="alert alert-warning">
+                                <div class="applications applications-warning">
                                     <span>Special Applicants</span>
                                 </div>
                             </a>
                             <a href=#>
-                                <div class="alert alert-danger">
+                                <div class="applications applications-danger">
                                     <span>Applicants with Multiple Applications</span>
                                 </div>
                             </a>
@@ -64,6 +64,7 @@
                 </div>
             </div>
         </div>
+
         <div class="container-fluid">
             <div class="card">
                 <div class="card-header" data-background-color="purple">
@@ -75,17 +76,17 @@
                         <div class="col-md-6">
                             <h5>Application Statistics</h5>
                             <a href=interviews/{{ query_current_all }}>
-                                <div class="alert alert-primary">
+                                <div class="applications applications-info">
                                     <span>Application History</span>
                                 </div>
                             </a>
                             <a href=interviews/{{ query_current_accepted }}>
-                                <div class="alert alert-success">
+                                <div class="applications applications-success">
                                     <span>Overview</span>
                                 </div>
                             </a>
                             <a href=interviews/{{ query_current_rejected }}>
-                                <div class="alert alert-danger">
+                                <div class="applications applications-danger">
                                     <span>Overview</span>
                                 </div>
                             </a>
@@ -93,17 +94,17 @@
                         <div class="col-md-6">
                             <h5>Admin Toolkit</h5>
                             <a href=#>
-                                <div class="alert alert-primary">
+                                <div class="applications applications-info">
                                     <span>Admissions Graphs</span>
                                 </div>
                             </a>
                             <a href=#>
-                                <div class="alert alert-success">
+                                <div class="applications applications-success">
                                     <span>Number Crunching</span>
                                 </div>
                             </a>
                             <a href=#>
-                                <div class="alert alert-danger">
+                                <div class="applications applications-danger">
                                     <span>Overview</span>
                                 </div>
                             </a>
