--- a/app/admin/templates/control_panel.html
+++ b/app/admin/templates/control_panel.html
@@ -56,7 +56,7 @@
                 <div class="content">
                     <h6 class="category text-gray">Misc. Information</h6>
                     <h4 class="card-title">How do I update my username?</h4>
-                    <p class="card-content">Username updating is currently not supported, please contact the developer for details</p>
+                    <p class="card-content">Username updating is currently not supported, please contact the developer for details.</p>
                 </div>
             </div>
         </div>
